fix(sass/selectors/_carousels.scss): comment out carousel-arrow due to z-index

--- a/sass/selectors/_carousels.scss
+++ b/sass/selectors/_carousels.scss
@@ -2,9 +2,9 @@
   @include carousel-dots;
 }
 
-.carousel-arrow {
-  @include carousel-arrow; // TODO requires z-index
-}
+// .carousel-arrow {
+//   @include carousel-arrow; // TODO requires z-index
+// }
 
 .resource-carousel-arrow {
   @include resource-carousel-arrow;
